--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/react": "^3.3.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.7.0",
